Update localizations (adding Greek, Russian)

--- a/HalloAppClip/de.lproj/Localizable.strings
+++ b/HalloAppClip/de.lproj/Localizable.strings
@@ -110,6 +110,9 @@
 /* Once the user completes registration in the app clip, this text is displayed in the AppClip prompting the user to install the full app to continue using HalloApp */
 "registration.install.app.to.continue" = "Installiere HalloApp, um fortzufahren";
 
+/* When user registers for HalloApp using the AppClip via group invite link, they are prompted to install HalloApp to join the group. */
+"registration.install.app.to.join.group" = "Bitte HalloApp installieren, um %@ beizutreten";
+
 /* Popup that appears when user tries to register uninvited number */
 "registration.invite.only" = "Wenn du einem Gruppeneinladungslink gefolgt bist, um dich zu registrieren, klicke bitte erneut auf den Link, um die Registrierung abzuschließen und der Gruppe beizutreten.";
 
