--- a/Share Extension/ru.lproj/Localizable.strings
+++ b/Share Extension/ru.lproj/Localizable.strings
@@ -1,6 +1,113 @@
-/* Title for generic Cancel button. Mostly used in popups and as such. */
-"button.cancel" = "Отмена";
+/* Title for alert shown when there's no internet connectivity */
+"alert.no.internet.title" = "Нет интернет-подключения";
+
+/* Message to tell the user to try again when they have internet connectivity again */
+"alert.no.internet.try.again" = "Проверьте, есть ли у вас интернет-подключение, и повторите попытку.";
+
+/* Title for generic Cancel button. Mostly used in popups and as such.
+   Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel" = "Отменить";
+
+/* Title for generic Continue button. Mostly used to complete some modal flow. */
+"button.continue" = "Продолжить";
+
+/* Title for generic Create button */
+"button.create" = "Создать";
+
+/* Title for generic Dismiss button. Mostly used to complete some modal flow. */
+"button.dismiss" = "Закрыть";
+
+/* Title for generic Done button. Mostly used to complete some modal flow. */
+"button.done" = "Готово";
+
+/* Title for button that will take user to iOS settings (e.g., to enable some permission we need). */
+"button.go.to.settings" = "Перейти в Настройки";
+
+/* Title for generic Learn More button. Used to provide user with additional context to actions requested. */
+"button.learn.more" = "Подробнее";
+
+/* Title for generic More button. Mostly used to complete some modal flow. */
+"button.more" = "Еще";
+
+/* Title for generic Next button. Mostly used to proceed to next screen in flow. */
+"button.next" = "Далее";
+
+/* Title for generic Not Now button. Mostly used to complete some modal flow. */
+"button.not.now" = "Не сейчас";
 
 /* Title for generic OK button. Mostly used in popups and as such. */
-"button.ok" = "ОК";
+"button.ok" = "OK";
+
+/* Title for generic Remove button. Mostly used to complete some modal flow. */
+"button.remove" = "Удалить";
+
+/* Title for generic Save button. Mostly used to complete some modal flow. */
+"button.save" = "Сохранить";
+
+/* Title for generic Send button. Mostly used to complete some modal flow. */
+"button.send" = "Отправить";
+
+/* Title for generic Share button. Mostly used to complete some modal flow. */
+"button.share" = "Поделиться";
+
+/* Title for generic Update button. Mostly used to complete some modal flow. */
+"button.update" = "Обновить";
+
+/* Title for generic delete button. */
+"Delete" = "Удалить";
+
+/* Generic 'learn more' link. Mostly used to present additional information about topic. */
+"link.learnMore" = "Подробнее";
+
+/* Link that when tapped will open App Store so user can update to the latest version of the app. */
+"link.update.your.app" = "Обнови свое приложение.";
+
+/* Displayed in place of own name (e.g., next to own comments) */
+"meCapitalized" = "Я";
+
+/* Placeholder for media caption. */
+"share.composer.placeholder" = "Напиши описание";
+
+/* Placeholder when sharing text only. */
+"share.composer.placeholder.text" = "Напиши пост";
+
+/* Composer subtitle when sharing with a contact */
+"share.composer.subtitle.contact" = "Отправка в адрес %@...";
+
+/* Composer subtitle for group posts */
+"share.composer.subtitle.group" = "Предоставляется совместный доступ %@...";
+
+/* Composer title when sharing with a contact */
+"share.composer.title.contact" = "Новое сообщение";
+
+/* Composer title when sharing to feed */
+"share.composer.title.feed" = "Новый пост";
+
+/* Alert dialog message shown when uploading fails.
+   Alert dialog title shown when uploading fails. */
+"share.composer.uploading.fail.title" = "Не удалось загрузить";
+
+/* Alert dialog title shown when uploading begins. */
+"share.composer.uploading.title" = "Загрузка...";
+
+/* Contacts category label */
+"share.destination.contacts" = "Контакты";
+
+/* Groups category label */
+"share.destination.groups" = "Группы";
+
+/* Share on the home feed label */
+"share.destination.home" = "Главная";
+
+/* Destination screen title */
+"share.destination.title" = "HalloApp";
+
+/* Message of alert when user is not logged in */
+"share.notlogged.message" = "Открой HalloApp и войди в него.";
+
+/* Title of alert when user is not logged in */
+"share.notlogged.title" = "Не выполнен вход";
+
+/* Displayed in place of contact name if name is not known. */
+"unknown.contact" = "Неизвестный контакт";
 
